--- a/it-inventory-hub/src/ui-components/inventory-item/inventory-item.component.html
+++ b/it-inventory-hub/src/ui-components/inventory-item/inventory-item.component.html
@@ -1,3 +1,5 @@
 <div class="item__id">{{ item.id }}</div>
 <div class="item__name">{{ item.name }}</div>
-<div class="item__interaction">[DELETE]</div>
+<div class="item__interaction">
+  <i class="bi bi-x-circle-fill" (click)="onDelete()"></i>
+</div>
