Create form partially working, range guards

--- a/it-inventory-hub/src/app/components/browse/browse.component.html
+++ b/it-inventory-hub/src/app/components/browse/browse.component.html
@@ -1,4 +1,4 @@
-<p>Owned items in the inventory</p>
+<p appHoverHighlight>Owned items in the inventory</p>
 
 <div class="list-of-items">
   <ui-inventory-item
