--- a/it-inventory-hub/src/ui-components/button/button.component.html
+++ b/it-inventory-hub/src/ui-components/button/button.component.html
@@ -1,1 +1,1 @@
-<button type="button" (click)="onClick()" class="btn btn-primary">{{ label }}</button>
+<button type="button" (click)="onClick()" class="btn btn-{{type}}">{{ label }}</button>
