--- a/it-inventory-hub/src/ui-components/dropdown/dropdown.component.html
+++ b/it-inventory-hub/src/ui-components/dropdown/dropdown.component.html
@@ -1,3 +1,9 @@
-<select value="{{ value }}">
-  <option value="{{ option.value }}" *ngFor="let option of options">{{ option.name }}</option>
+<select>
+  <option 
+    *ngFor="let option of options" 
+    value="{{ option.value }}" 
+    [attr.selected]="value === option.value ? 'selected' : null"
+  >
+    {{ option.name }}
+  </option>
 </select>
