--- a/it-inventory-hub/src/app/components/browse/inventory-item/inventory-item.component.html
+++ b/it-inventory-hub/src/app/components/browse/inventory-item/inventory-item.component.html
@@ -1,5 +1,8 @@
 <div class="item__id">{{ item.id }}</div>
-<div class="item__name">{{ item.name }}</div>
+<div class="item__name">
+  <i class="bi bi-{{ item.type | toInventoryTypeIcon }}"></i>
+  {{ item.name }}
+</div>
 <div class="item__interaction">
   <i class="bi bi-x-circle-fill" (click)="onDelete()"></i>
 </div>
