--- a/it-inventory-hub/src/app/components/create-item/create-item.component.html
+++ b/it-inventory-hub/src/app/components/create-item/create-item.component.html
@@ -1,10 +1,9 @@
 <p>Add new item in your inventory!</p>
 
 <form class="new-item-form" [formGroup]="itemForm">
-  <ui-input placeholder="Device ID" [value]="itemForm.controls.id.value" formControlName="id" ngDefaultControl></ui-input>
   <ui-input placeholder="Device Name" [value]="itemForm.controls.name.value" formControlName="name" ngDefaultControl></ui-input>
 
-  <ui-dropdown [options]="options" formControlName="type"></ui-dropdown>
+  <ui-dropdown [options]="options" [value]="itemForm.controls.type.value" formControlName="type" ngDefaultControl></ui-dropdown>
 
   <div class="new-item-form__bottom">
     <ui-button label="New" type="primary" (click)="createNew()"></ui-button>
