--- a/it-inventory-hub/src/app/components/create-item/create-item.component.html
+++ b/it-inventory-hub/src/app/components/create-item/create-item.component.html
@@ -7,5 +7,13 @@
 
   <div class="new-item-form__bottom">
     <ui-button label="New" type="primary" (click)="createNew()"></ui-button>
+
+    <div class="invalid-form" *ngIf="itemForm.controls.name.errors?.['required']">
+      Device name is required.
+    </div>
+
+    <div class="invalid-form" *ngIf="itemForm.controls.name.errors?.['minlength']">
+      Device name need to be longer than 4 characters.
+    </div>
   </div>
 </form>
