--- a/it-inventory-hub/src/app/app.component.html
+++ b/it-inventory-hub/src/app/app.component.html
@@ -1,6 +1,10 @@
 <ui-menu-bar>
     <ui-button label="Browse" routerLink="browse"></ui-button>
     <ui-button label="Create" routerLink="create"></ui-button>
+    <ui-dropdown 
+        [options]="[{ name: 'English', value: 'en'}, {name: 'German', value: 'de' }]"
+        (selectionChanged)="languageChanged($event)"
+    ></ui-dropdown>
 </ui-menu-bar>
 
 <router-outlet></router-outlet>
