--- a/it-inventory-hub/src/app/components/login/login.component.html
+++ b/it-inventory-hub/src/app/components/login/login.component.html
@@ -1,3 +1,3 @@
 <p>
-  <ui-button label="Let me in!" type="primary" (click)="logIn()"></ui-button>
+  <ui-button label="{{ 'LOGIN.BUTTON' | translate }}" type="primary" (click)="logIn()"></ui-button>
 </p>
