introduce bootstrap modal
base modal layout

--- a/it-inventory-hub/src/app/components/create-item/create-item.component.html
+++ b/it-inventory-hub/src/app/components/create-item/create-item.component.html
@@ -17,3 +17,25 @@
     </div>
   </div>
 </form>
+
+template: 
+<div class="modal" id="myModal" #myModalComp>
+  <div class="modal-dialog modal-sm" >
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h4 class="modal-title">Dialog title</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModal()">X</button>
+      </div>
+
+      <div class="modal-body">
+         Item was added!
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="closeModal()">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
